<resources>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_sign_up">Inscription</string>
    <string name="title_activity_news_feed">Les News</string>
    <string name="title_activity_news_details">Détails</string>
    <string name="label_username">Nom d\'utilisateur</string>
    <string name="label_password_login">Mot de passe</string>
    <string name="label_button_login">Connexion</string>
    <string name="label_signup_login">Vous n\'avez pas de compte ? Inscrivez-vous </string>
    <string name="app_logo_login">Logo de l\'application</string>
    <string name="logo_newsdetails">Logo NewsDetails</string>
    <string name="label_button_signup">S\'inscrire</string>
    <string name="label_login_signup">Vous avez déjà un compte ? Connectez-vous</string>
</resources>
