<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/label_button_login" />

        <EditText
            android:autofillHints="username"
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:layout_marginTop="16dp"
            android:hint="@string/label_username"
            android:inputType="text" />

        <EditText
            android:autofillHints="password"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEditText"
            android:layout_marginTop="8dp"
            android:hint="@string/label_password_login"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_marginTop="16dp"
            android:text="@string/label_button_signup"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpButton"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/label_login_signup" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>